Bugfix: Horizontal scroll bug fixed.

--- a/neoplurkcss3.css
+++ b/neoplurkcss3.css
@@ -7,6 +7,10 @@
 /* Version 20130314  Recommanded Resolution: 700x700+					*/
 /****************************************************************************************/
 
+html {
+	overflow-x: hidden;
+}
+
 html, body {
 	width: 100%;
 	height: 99%;
